# flashcards

./: .gitignore  Cargo.toml  README.md  main.py
src/: README.md  cards.rs  io.rs  main.rs  repl.rs
