[package]
name = "flashcards"
version = "0.1.0"
authors = ["Tyler Stanish <tystanish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
codegen-units = 16

[dependencies]
chrono = "0.4"
clap = "2.33.0"
rustyline = "^6"
tempfile = "^3"
uuid = { version = "^0", features = ["v4"] }